# siasun-dual-arm-urdf

./: CMakeLists.txt  README.md  package.xml  urdf.rviz
config/: joint_names_srs-77dof.yaml
controller/: jp_controller.yaml
launch/: controller_utils.launch  display.launch  gazebo.launch
meshes/: base_link.STL  link-l1.STL  link-l2.STL  link-l3.STL  link-l4.STL  link-l5.STL  link-l6.STL  link-l7.STL  link-r1.STL  link-r2.STL  link-r3.STL  link-r4.STL  link-r5.STL  link-r6.STL  link-r7.STL
urdf/: srs-77dof.csv  srs-77dof.gv  srs-77dof.urdf
