<package>
  <name>srs-77dof</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for srs-77dof</p>
    <p>This package contains configuration data, 3D models and launch files
for srs-77dof robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>gazebo</build_depend>
  <export>
    <architecture_independent />
  </export>
</package>